--- a/MTDS.Web/Views/Home/Home.cshtml
+++ b/MTDS.Web/Views/Home/Home.cshtml
@@ -4,5 +4,22 @@
 
 
 
-<h1>这是主页</h1>
-
+<table class="table table-striped table-hover table-bordered edit_add tb-h" id="tbPro" style="margin-top: 10px;">
+    <thead>
+        <tr>
+            <th style="width:7%;" class="tab-center">设备编号</th>
+            <th style="width:12%;" class="tab-center">设备名称</th>
+            <th style="width:12%;" class="tab-center">场地名称</th>
+            <th style="width:20%;" class="tab-center">用地类别</th>
+            <th style="width:10%;" class="tab-center">场地类别</th>
+            @*<th style="width:10%;" class="tab-center">拐点坐标</th>*@
+            <th style="width:10%;" class="tab-center">评估进度</th>
+            <th style="width:9%;" class="tab-center">操作</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
