--- a/MTDS.Web/Views/Shared/_Header.cshtml
+++ b/MTDS.Web/Views/Shared/_Header.cshtml
@@ -25,7 +25,7 @@
             <ul class="nav top-menu">
                 <li class="dropdown">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                        欢迎您：<span style="margin-left:0!important;"></span>
+                        欢迎您，Hello Word<span style="margin-left:0!important;"></span>
                         <span class="caret" style="margin-left:5px!important;"></span>
                         <span class="badge bg-theme"></span>
                     </a>
