--- a/MTDS.Web/Views/Login/Index.cshtml
+++ b/MTDS.Web/Views/Login/Index.cshtml
@@ -28,7 +28,6 @@
 </div>
 
 <script src="~/js/jQuery.js"></script>
-
 <script src="~/js/fun.base.js"></script>
 <script src="~/js/script.js"></script>
 <script src="~/Scripts/layer.js"></script>
@@ -53,6 +52,24 @@
             layer.msg("密码不能为空", { icon: 2, time: 2000 });
             $("#password").focus();
         }
+
+        $.ajax({
+            type: "POST",
+            url: "/Login/Login",
+            data: { userName: $("#userName").val(), password: $("#password").val() },
+            dataType: "json",
+            success: function (data) {
+                if (data == "0") {
+                    layer.msg('用户不存在!', { icon: 2, time: 1000 });
+                } else if (data == "1") {
+                    layer.msg('密码不正确!', { icon: 2, time: 1000 });
+                } else {
+                    //登录成功
+                    location.href = "/Project/ProList";
+                    //$(".close").click();
+                }
+            }
+        });
 
     })
 
