--- a/MTDS.Web/Views/Shared/_Layout.cshtml
+++ b/MTDS.Web/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
     </section>
 </body>
 </html>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
 <script class="include" type="text/javascript" src="/assets/js/jquery.dcjqaccordion.2.7.js"></script>
 <script src="/assets/js/jquery.scrollTo.min.js"></script>
