--- a/MTDS.Web/Views/Shared/_Layout.cshtml
+++ b/MTDS.Web/Views/Shared/_Layout.cshtml
@@ -7,12 +7,12 @@
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
     <!--external css-->
     <link href="/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-
+    <link href="~/css/default.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="/assets/css/style.css" rel="stylesheet">
     <link href="/assets/css/style-responsive.css" rel="stylesheet">
     <link href="~/Css/bootstrap-reset.css" rel="stylesheet" />
-
+    <link href="~/css/bootstrapValidator.css" rel="stylesheet" />
     <link href="/assets/css/table-responsive.css" rel="stylesheet">
     <link href="/Css/lanrenzhijia.css" type="text/css" rel="stylesheet">
     <script src="js/html5shiv.js"></script>
@@ -78,7 +78,7 @@
 <script src="/assets/js/jquery.nicescroll.js" type="text/javascript"></script>
 <script src="/assets/js/jquery.sparkline.js"></script>
 <script type="text/javascript" src="/Scripts/layer/1.9.3/layer.js"></script>
-
+<script src="~/Scripts/bootstrapValidator.js"></script>
 <!--common script for all pages-->
 <script src="/assets/js/common-scripts.js"></script>
 
