--- a/MTDS.Web/Views/Shared/_Left.cshtml
+++ b/MTDS.Web/Views/Shared/_Left.cshtml
@@ -15,56 +15,16 @@
         <!-- sidebar menu start左侧菜单栏开始-->
         <ul class="sidebar-menu" id="nav-accordion" style="margin-top:20px!important;">
             <li class="sub-menu">
-                <a href="javascript:void(0)" id="prolist" onclick="TurnToProPage('../Project/ProList')">
-                    <span class="wdxm">我的项目</span>
+                <a href="javascript:void(0)" id="prolist" onclick="ReturnPage('../Home/Home')">
+                    <span class="wdxm">设备管理</span>
                 </a>
             </li>
             <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../Report/Info')">
-                    <span class="cdfx">初调分析</span>
+                <a href="javascript:void(0)" onclick="ReturnPage('../User/Index')">
+                    <span class="cdfx">用户管理</span>
                 </a>
             </li>
-            <li class="sub-menu">
-                <a id="xdfx" href="javascript:void(0)" onclick="TurnToPage('../Report/Second')">
-                    <span class="xdfx">详调分析</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../CAInfo/CAInfo')">
-                    <span class="whsb">危害识别</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../Pathway/PathwayList')">
-                    <span class="blpg">暴露评估</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../Pollutant/PollutantVir')">
-                    <span class="dxpg">毒性评估</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../Report/RiskCharacterization')">
-                    <span class="fxbz">风险表征</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../UnCertaintyAnalyse/UnCertainty')">
-                    <span class="bqdxfx">不确定性分析</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnToPage('../RiskVariable/RiskControlVariable')">
-                    <span class="fxkzz">风险控制值</span>
-                </a>
-            </li>
-            <li class="sub-menu">
-                <a href="javascript:void(0)" onclick="TurnSysToPage('../SystemParameter/EnvirQuality')">
-
-                    <span class="xtcs">系统参数</span>
-                </a>
-            </li>
+          
         </ul>
         <!-- sidebar menu end左侧菜单栏结束-->
     </div>
