--- a/MTDS.Web/Views/User/Index.cshtml
+++ b/MTDS.Web/Views/User/Index.cshtml
@@ -138,7 +138,7 @@
     });
     //初始化数据
     function initData(pageIndex) {
-        $.getJSON("../User/GetList", { pageIndex: pageIndex }, function (data) {
+        $.getJSON("../User/GetList", { id1: pageIndex }, function (data) {
             if (data != "error") {
                 var str = "";
                 $("#tbody").html("");
@@ -208,8 +208,8 @@
     function Delete(obj, id) {
         //layer.msg(id);
         layer.confirm("确定要删除吗?", function () {
-            $.post("../Handle/EquipmentHandler.ashx?action=delete", { pid: id }, function (data) {
-                if (data == "ok") {
+            $.post("../User/Delete", { uid: id }, function (data) {
+                if (data == "success") {
                     $(obj).parents("tr").remove();
                     layer.msg("删除成功", { icon: 1, time: 1000 });
                 } else {
@@ -222,7 +222,7 @@
 
     //编辑
     function Edit(id) {
-        $.getJSON("../Handle/EquipmentHandler.ashx?action=edit", { pid: id }, function (data) {
+        $.getJSON("../User/GetSingle", { uid: id }, function (data) {
             if (data != "error") {
                 $("#HidUId").val(id);  //编号Id
                 $("#txtCategory").val(data.Category); //设备类型
