--- a/MTDS.Web/Views/Shared/_Header.cshtml
+++ b/MTDS.Web/Views/Shared/_Header.cshtml
@@ -12,7 +12,7 @@
     <!--logo start-->
     <span class="logo" style="float:left;margin-top:10px;color:white;cursor:default">
         <img src="/images/1.png"  style="width:auto;height:45px;margin-left:30px;">
-        <b style="font-family: 'STXINWEI'!important; font-size: 24px; font-weight: normal; ">山洪灾害设备管理运维系统</b>
+        <b style="font-family: 'STXINWEI'!important; font-size: 24px; font-weight: normal; ">山西省防汛设备运维管理系统</b>
     </span>
     <!--logo end-->
     @*project name start*@
