--- a/MTDS.Web/Views/Login/Index.cshtml
+++ b/MTDS.Web/Views/Login/Index.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="pwd">
                     <label>密　码</label><input type="password" class="text" id="password" placeholder="密码" name="" tabindex="2">
-                    <input type="button" class="submit" id="btnLogin" tabindex="3" value="登录" onclick="login()">
+                    <input type="button" class="submit" id="btnLogin" tabindex="3" value="登录" onclick="Login()">
                     <div class="check"></div>
                 </div>
                 <div class="tip"></div>
