--- a/MTDS.Web/Views/Property/Property.cshtml
+++ b/MTDS.Web/Views/Property/Property.cshtml
@@ -4,9 +4,37 @@
 }
 
 <section id="main-content">
+        <div style="margin-top: 0px;">
+            <div class="row" style="margin-top: 0px;">
+                <ul id="tabs" class="mtab">
+                    <li class="current">
+                        <a href="#" id="assetTypeName">设备列表</a>
+                    </li>
 
-    <section class="wrapper site-min-height">
-        <div class="col-md-5">
+                </ul>
+
+                <div class="modal-header">
+                    <div class="btn_float" style=" margin-left:15px;">
+                        <button class="btn btn-primary green" data-toggle="modal" href="#mymodal" id="btnAdd">添加设备</button>
+                    </div>
+                    <div style="clear:both;"></div>
+                </div>
+                <table class="table table-striped table-hover table-bordered edit_add tb-h" id="tbPro" style="margin-top: 10px;">
+                    <thead id="t_head">
+                        <tr>
+                      
+                        </tr>
+                    </thead>
+                    <tbody id="tbody"></tbody>
+                </table>
+
+                <div class="col-sm-12 page_div" style="">
+                    <span class="col-sm-2 page_total" style="white-space:nowrap">共有数据：<strong id="userCount"></strong> 条</span>
+                    <div id="NavLink" class="paginator pd-20 col-sm-10" style="text-align: center"></div>
+                </div>
+            </div>
+        </div>
+        @*<div class="col-md-5">
             <!-- START PANEL -->
             <div class="panel ogr_add">
                 <header class="panel-heading add_padding">
@@ -64,8 +92,7 @@
                 </div>
                 
             </div>
-        </div>
-    </section>
+        </div>*@
 </section>
 
 <script type="text/javascript">
